# MPC

./: .gitignore  CMakeLists.txt  MPC.cpp  MPC.hpp  MPCformula.txt  QPSolver.cpp  QPSolver.hpp  README.md  main.cpp
